# tree-sitter-powerscript

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  grammar_improvement.md
bindings/c/: tree-sitter-powerscript.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_powerscript/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPowerScript/: powerscript.h
bindings/swift/TreeSitterPowerScriptTests/: TreeSitterPowerScriptTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: application_file.txt  pb_extension.txt  regression_errors.txt  statements.txt
